# AlphaTsuky_From_Scratch

./: .gitignore  README.md  pyproject.toml
configs/engine/: go13.yaml  go19.yaml  go5.yaml  go9.yaml
docs/: architecture.md  game_rules.md
src/azgo/: __init__.py  __main__.py  _version.py  arena.py  checkpoint.py  cli.py  config.py  encoding.py  evaluator.py  inference.py  learner.py  network.py  operations.py  replay.py  search.py  self_play.py  sgf.py  symmetry.py  training_run.py
src/azgo/game/: __init__.py  coordinates.py  errors.py  state.py  types.py  zobrist.py
tests/: test_arena.py  test_checkpoint.py  test_cli.py  test_config.py  test_coordinates.py  test_encoding.py  test_evaluator.py  test_game_state.py  test_inference.py  test_learner.py  test_network.py  test_properties.py  test_replay.py  test_scoring.py  test_search.py  test_self_play.py  test_sgf.py  test_symmetry.py  test_training_run.py  test_types.py  test_zobrist.py
