[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "alphazero-go"
version = "0.1.0"
description = "A correctness-first AlphaZero research implementation for Go"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2,<2",
    "numpy>=2.1,<3",
    "omegaconf>=2.3,<3",
    "pydantic>=2.9,<3",
    "torch>=2.12,<2.13",
    "typer>=0.12,<1",
]

[project.scripts]
azgo = "azgo.cli:app"

[dependency-groups]
dev = [
    "hypothesis>=6.112,<7",
    "mypy>=1.11,<2",
    "pytest>=8.3,<9",
    "ruff>=0.6,<1",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/azgo"]

[tool.hatch.build.targets.sdist]
exclude = ["/.vscode"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "DTZ",
    "E",
    "F",
    "FA",
    "I",
    "ICN",
    "ISC",
    "N",
    "PERF",
    "PIE",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "T20",
    "TCH",
    "UP",
    "W",
]
ignore = [
    "ANN401", # Any is sometimes required at typed library boundaries.
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",
    "ARG",
    "S101",
]

[tool.ruff.lint.isort]
known-first-party = ["azgo"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
warn_unreachable = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["hydra", "hydra.*", "omegaconf", "omegaconf.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "-ra",
]
minversion = "8.3"
testpaths = ["tests"]
xfail_strict = true

